[metadata]
name = catch
package_name = catch
author = Michael S. P. Kelley
author_email = msk@astro.umd.edu
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/Small-Bodies-Node/catch
description = Planetary Data System Small-Bodies Node astronomical survey search tool.
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = Small-Bodies-Node/catch
keywords = astronomy, astrophysics, planetary, asteroid, comet, space, science

[options]
packages = find:
zip_save = False
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17.0
    astropy>=4.0
    astroquery>=0.4.4.dev7007
    sbpy>0.2.2
    sbsearch>=2.0.0dev0
include_package_data = False

[options.extras_require]
test =
    pytest>=4.6
    pytest-astropy
    coverage
    testing.postgresql
figures =
    spherical_geometry
    healpy
    matplotlib

[options.entry_points]
console_scripts =
    catch = catch:catch_cli

[tool:pytest]
minversion = 4.6
testpaths = "catch"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --cov=catch --cov-report=html
#addopts = --doctest-rst --doctest-plus
remote_data_strict = true
doctest_norecursedirs =
    */setup_package.py


[coverage:run]
omit =
    catch/test/*
    catch/version*
    catch/setup_package.py


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

